Add banner & link to the new portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet" />
     <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet" />
     <link rel="icon" href="<%= BASE_URL %>developer.png">
+      <meta name="description"
+        content="A portfolio for Mohammad Dallah, which describes some information about him, his skills and the projects, which he's done it." />
     <title>MD-Portfolio</title>
   </head>
   <body>
